--- a/probabilities.cabal
+++ b/probabilities.cabal
@@ -17,6 +17,8 @@ library
   hs-source-dirs:      src
   exposed-modules:     Examples 
   build-depends:       base >= 4.7 && < 5
+                       , random >= 1.1
+                       , containers >= 0.5.6.2
   default-language:    Haskell2010
 
 executable probabilities-exe
