--- a/probabilities.cabal
+++ b/probabilities.cabal
@@ -19,6 +19,7 @@ library
   build-depends:       base >= 4.7 && < 5
                        , random >= 1.1
                        , containers >= 0.5.6.2
+                       , QuickCheck
   default-language:    Haskell2010
 
 executable probabilities-exe
@@ -35,6 +36,7 @@ test-suite probabilities-test
   main-is:             Spec.hs
   build-depends:       base
                      , probabilities
+                     , QuickCheck
   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
   default-language:    Haskell2010
 
